@@ -1,3 +1,6 @@
+2013-01-19 Graeme Gott <graeme@gottcode.org>
+	* Cache definitions for two weeks.
+
 2013-01-15 Graeme Gott <graeme@gottcode.org>
 	* Show entire definition of word.
 
